catalogitems.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-items-deployment
  annotations:
    config.linkerd.io/proxy-cpu-limit: "0.4"
    config.linkerd.io/proxy-cpu-request: "0.05"
spec:
  selector:
    matchLabels:
      app: catalog-items
  template:
    metadata:
      labels:
        app: catalog-items
    spec:
      containers:
        - name: catalog-items
          image: mattavireddy/catalogitems:v3
          imagePullPolicy: Always
          resources:
          limits:
            cpu: 450m
          requests:
            cpu: 55m
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-items-service
spec:
  type: ClusterIP
  selector:
    app: catalog-items
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
