catalog-mongodb-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: catalog-mongodb-policy
spec:
  podSelector:
    matchLabels:
      role: mongo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: catalog
      ports:
        - port: 27017
